# osirose

./: .gitignore  CMakeLists.txt  ProjectHome.md
Char Server/: charclient.cpp  charpackets.cpp  charserver.h  datatypes.h  extrafunctions.cpp
Common/: SocketBase.cpp  SocketClient.cpp  config.cpp  globals.cpp  log.h  rosecrypt.hpp  socket-server.cpp  sockets.h
Login Server/: extrafunction.cpp  loginserver.cpp  loginserver.h  main.cpp
World Server/: MainProcess.cpp  Monster.cpp  MonsterEvents.cpp  MonsterStats.cpp  Party.cpp  ServerFunctions.cpp  WorldServer.h  Worldprocess.cpp  battle.cpp  character.cpp  character.h  charevent.cpp  charstats.cpp  clan.cpp  extrafunctions.cpp  gmcmds.cpp  mapfunctions.cpp  monsterfunctions.cpp  party.h  partyfunctions.cpp  playerquest.cpp  startup.cpp  stbhandler.cpp  stbhandler.h  strhashing.cpp  worldmap.cpp  worldpackets.cpp  worldserver.cpp
World Server/aip/: AiActions.cpp  AiConditions.cpp  AiConditions.h  Aip.h
World Server/quest/: CIntStb.hpp  CRoseArray.hpp  QuestActions.cpp  QuestActions.h  Quests.cpp  (+1 more)
char/: charserver.cpp  clan.cpp  community.cpp  main.cpp  signal.cpp
common/: config.cpp  config.h  log.cpp  log.h  rosecrypt.cpp  socket-client.cpp  socket-server.cpp  sockets.h
login/: datatype.h  loginclient.cpp  loginpackets.cpp  loginserver.cpp  loginserver.h  main.cpp  signal.cpp
misc/: seven-hearts.yml
world/: Buff.cpp  WorldMonster.cpp  WorldMonster.h  charfunctions.cpp  chartype.h  datatypes.h  itemdata.cpp  main.cpp  player.cpp  player.h  playerdata.cpp  playerfunctions.cpp  playerstats.cpp  worldmap.h
(+8 files in other folders)
